feat: complete portfolio redesign with GSAP, Spline, Framer Motion
- Add Lenis smooth scroll hook with GSAP sync
- Create SplitReveal component for page-turning effects
- Create HorizontalTextReveal component
- Redesign Hero with Spline 3D background and GSAP character animation
- Redesign About section with GSAP stagger animations
- Redesign Projects with horizontal scroll reveal
- Update Navigation with smooth scroll and mobile menu
- Update Footer with dark theme
- Install dependencies: gsap, framer-motion, @studio-freight/lenis, @splinetool/react-spline

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@splinetool/react-spline": "^4.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "gsap": "^3.14.2",
